# arvyy-chess-engine

./: .hlint.yaml  Makefile  README.adoc  bench.sh  chessengine.cabal
benchmark/: EvalBenchmark.hs
pieces_heatmaps/: build.sh
src/ChessEngine/: BenchMain.hs  Board.hs  CandidateMoves.hs  EvaluatorData.hs  Heatmaps.hs  HeuristicEvaluator.hs  LichessMain.hs  MutableBuffer.hs  PositionEval.hs  PrecomputedCandidateMoves.hs  ReplUtil.hs  TimeManager.hs  UCI.hs  UCIMain.hs
test/: BoardTest.hs  PerftTest.hs
