cabal-version:       2.2
name:                chessengine
version:             0.1.0.0
license-file:        LICENSE
author:              Arvydas Silanskas
maintainer:          nma.arvydas.silanskas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common deps
  build-depends:
     async >=2.2.5,
     base >=4.14,
     array,
     containers >=0.6,
     unordered-containers >= 0.2,
     hashable >= 1.4,
     hashtables,
     transformers >=0.6,
     time >=1.9,
     stm >=2.5,
     regex-pcre-builtin >=0.95,
     stm-containers >=1.2.1,
     tf-random >=0.5,
     random >=1.2,
     vector-builder >=0.3.8.5,
     vector >=0.13


library chess-internal
  import: deps
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  exposed-modules: 
    ChessEngine.ReplUtil,
    ChessEngine.Heatmaps, 
    ChessEngine.Board,
    ChessEngine.PositionEval,
    ChessEngine.UCI,
    ChessEngine.EvaluatorData,
    ChessEngine.HeuristicEvaluator
    ChessEngine.PrecomputedCandidateMoves
    ChessEngine.TimeManager
    
executable chessengine_uci
  import: deps
  main-is: src/ChessEngine/UCIMain.hs
  default-language: Haskell2010
  ghc-options: -Wall -threaded "-with-rtsopts=-N -qg" -feager-blackholing -fno-omit-yields
  build-depends:
    chess-internal

executable chessengine_bench
  import: deps
  main-is: src/ChessEngine/BenchMain.hs
  default-language: Haskell2010
  build-depends:
    chess-internal

benchmark chessengine_benchmark
  import: deps
  type: exitcode-stdio-1.0
  main-is: EvalBenchmark.hs
  hs-source-dirs: benchmark
  default-language: Haskell2010
  build-depends:
    chess-internal,
    criterion

test-suite board-tests
  import: deps
  type: exitcode-stdio-1.0
  main-is: BoardTest.hs
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends: 
    chess-internal,
    tasty >=1.4.3,
    tasty-quickcheck >=0.10.2,
    tasty-hunit >=0.10.0.3,
    QuickCheck >=2.14.3

test-suite perft-tests
  import: deps
  type: exitcode-stdio-1.0
  main-is: PerftTest.hs
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends: 
    chess-internal,
    tasty >=1.4.3,
    tasty-quickcheck >=0.10.2,
    tasty-hunit >=0.10.0.3,
    QuickCheck >=2.14.3
